# serializer version: 1
# name: test_parse_devices
  dict({
    'air_temp': dict({
      'label': 'Air Temp',
      'state': '93',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'aux_1': dict({
      'is_on': False,
      'label': 'Cleaner',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_2': dict({
      'is_on': False,
      'label': 'Sheer Dscnts',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_3': dict({
      'is_on': False,
      'label': 'Aux3',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_4': dict({
      'is_on': False,
      'label': 'Aux V1',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_5': dict({
      'is_on': False,
      'label': 'Aux V2',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_6': dict({
      'is_on': False,
      'label': 'Aux V3',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_7': dict({
      'is_on': False,
      'label': 'Aux V4',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_B1': dict({
      'is_on': False,
      'label': 'Aux V5',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_B2': dict({
      'is_on': False,
      'label': 'Aux V6',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_B3': dict({
      'is_on': False,
      'label': 'Aux V7',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_B4': dict({
      'is_on': False,
      'label': 'Aux V8',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_B5': dict({
      'is_on': False,
      'label': 'Aux V9',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_B6': dict({
      'is_on': False,
      'label': 'Aux V10',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_B7': dict({
      'is_on': False,
      'label': 'Aux V11',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_B8': dict({
      'is_on': False,
      'label': 'Aux V12',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_C1': dict({
      'is_on': False,
      'label': 'Aux V13',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_C2': dict({
      'is_on': False,
      'label': 'Aux V14',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_C3': dict({
      'is_on': False,
      'label': 'Aux V15',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_C4': dict({
      'is_on': False,
      'label': 'Aux V16',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_C5': dict({
      'is_on': False,
      'label': 'Aux V17',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_C6': dict({
      'is_on': False,
      'label': 'Aux V18',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_C7': dict({
      'is_on': False,
      'label': 'Aux V19',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_C8': dict({
      'is_on': False,
      'label': 'Aux V20',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_D1': dict({
      'is_on': False,
      'label': 'Aux V21',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_D2': dict({
      'is_on': False,
      'label': 'Aux V22',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_D3': dict({
      'is_on': False,
      'label': 'Aux V23',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_D4': dict({
      'is_on': False,
      'label': 'Aux V24',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_D5': dict({
      'is_on': False,
      'label': 'Aux V25',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_D6': dict({
      'is_on': False,
      'label': 'Aux V26',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_D7': dict({
      'is_on': False,
      'label': 'Aux V27',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_D8': dict({
      'is_on': False,
      'label': 'Aux V28',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'aux_EA': dict({
      'is_on': False,
      'label': 'Extra Aux',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
      'unit': None,
    }),
    'cover_pool': dict({
      'label': 'Cover Pool',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'freeze_protection': dict({
      'is_on': False,
      'label': 'Freeze Protection',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaBinarySensor',
      'unit': None,
    }),
    'is_icl_present': dict({
      'is_on': True,
      'label': 'Is Icl Present',
      'state': 'present',
      'state_translated': 'PRESENT',
      'type': 'IaquaPresenceSensor',
      'unit': None,
    }),
    'orp': dict({
      'label': 'Orp',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'ph': dict({
      'label': 'Ph',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'pool_heater': dict({
      'is_on': False,
      'label': 'Pool Heater',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaHeater',
      'unit': None,
    }),
    'pool_pump': dict({
      'is_on': True,
      'label': 'Pool Pump',
      'state': '1',
      'state_translated': 'ON',
      'type': 'IaquaSwitch',
      'unit': None,
    }),
    'pool_salinity': dict({
      'label': 'Pool Salinity',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'pool_set_point': dict({
      'current_temperature': '89',
      'is_on': False,
      'label': 'Pool Set Point',
      'state': '48',
      'state_translated': None,
      'target_temperature': '48',
      'type': 'IaquaThermostat',
      'unit': 'F',
    }),
    'pool_temp': dict({
      'label': 'Pool Temp',
      'state': '89',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'relay_count': dict({
      'label': 'Relay Count',
      'state': '4',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'solar_heater': dict({
      'is_on': False,
      'label': 'Solar Heater',
      'state': '',
      'state_translated': None,
      'type': 'IaquaHeater',
      'unit': None,
    }),
    'spa_heater': dict({
      'is_on': False,
      'label': 'Spa Heater',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaHeater',
      'unit': None,
    }),
    'spa_pump': dict({
      'is_on': False,
      'label': 'Spa Pump',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSwitch',
      'unit': None,
    }),
    'spa_salinity': dict({
      'label': 'Spa Salinity',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'spa_set_point': dict({
      'current_temperature': '',
      'is_on': False,
      'label': 'Spa Set Point',
      'state': '54',
      'state_translated': None,
      'target_temperature': '54',
      'type': 'IaquaThermostat',
      'unit': 'F',
    }),
    'spa_temp': dict({
      'label': 'Spa Temp',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
  })
# ---
# name: test_parse_home
  dict({
    'air_temp': dict({
      'label': 'Air Temp',
      'state': '93',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'cover_pool': dict({
      'label': 'Cover Pool',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'freeze_protection': dict({
      'is_on': False,
      'label': 'Freeze Protection',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaBinarySensor',
      'unit': None,
    }),
    'is_icl_present': dict({
      'is_on': True,
      'label': 'Is Icl Present',
      'state': 'present',
      'state_translated': 'PRESENT',
      'type': 'IaquaPresenceSensor',
      'unit': None,
    }),
    'orp': dict({
      'label': 'Orp',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'ph': dict({
      'label': 'Ph',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'pool_heater': dict({
      'is_on': False,
      'label': 'Pool Heater',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaHeater',
      'unit': None,
    }),
    'pool_pump': dict({
      'is_on': True,
      'label': 'Pool Pump',
      'state': '1',
      'state_translated': 'ON',
      'type': 'IaquaSwitch',
      'unit': None,
    }),
    'pool_salinity': dict({
      'label': 'Pool Salinity',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'pool_set_point': dict({
      'current_temperature': '89',
      'is_on': False,
      'label': 'Pool Set Point',
      'state': '48',
      'state_translated': None,
      'target_temperature': '48',
      'type': 'IaquaThermostat',
      'unit': 'F',
    }),
    'pool_temp': dict({
      'label': 'Pool Temp',
      'state': '89',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'relay_count': dict({
      'label': 'Relay Count',
      'state': '4',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'solar_heater': dict({
      'is_on': False,
      'label': 'Solar Heater',
      'state': '',
      'state_translated': None,
      'type': 'IaquaHeater',
      'unit': None,
    }),
    'spa_heater': dict({
      'is_on': False,
      'label': 'Spa Heater',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaHeater',
      'unit': None,
    }),
    'spa_pump': dict({
      'is_on': False,
      'label': 'Spa Pump',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSwitch',
      'unit': None,
    }),
    'spa_salinity': dict({
      'label': 'Spa Salinity',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
    'spa_set_point': dict({
      'current_temperature': '',
      'is_on': False,
      'label': 'Spa Set Point',
      'state': '54',
      'state_translated': None,
      'target_temperature': '54',
      'type': 'IaquaThermostat',
      'unit': 'F',
    }),
    'spa_temp': dict({
      'label': 'Spa Temp',
      'state': '',
      'state_translated': None,
      'type': 'IaquaSensor',
      'unit': None,
    }),
  })
# ---
# name: test_parse_onetouch
  dict({
    'onetouch_1': dict({
      'is_on': False,
      'label': 'All Off',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaOneTouchSwitch',
      'unit': None,
    }),
    'onetouch_2': dict({
      'is_on': False,
      'label': 'Spa Mode',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaOneTouchSwitch',
      'unit': None,
    }),
    'onetouch_3': dict({
      'is_on': False,
      'label': 'Clean Mode',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaOneTouchSwitch',
      'unit': None,
    }),
    'onetouch_5': dict({
      'is_on': False,
      'label': 'Onetouch 5',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaOneTouchSwitch',
      'unit': None,
    }),
    'onetouch_6': dict({
      'is_on': False,
      'label': 'Water Falls',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaOneTouchSwitch',
      'unit': None,
    }),
  })
# ---
